samples/_failures_safe/1761279960_848e7e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75919f1b.c: In function ‘main’:
./samples/SAFE/__tmp_75919f1b.c:141:9: error: expected declaration or statement at end of input
  141 |         if (cols1 != rows2) {
      |         ^~
./samples/SAFE/__tmp_75919f1b.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_75919f1b.c:141:9: error: expected declaration or statement at end of input
